fixed the white overflow

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     ---color: hsl(228, 45%, 44%); ;
 }
 body{
-    position: relative;
+    /* position: relative; */
     font-family: "Barlow Semi Condensed", sans-serif;
     overflow:hidden;
 }
@@ -39,19 +39,24 @@ body{
 #show{
     display: flex;
 }
+
 /* ! SCOREBOARD */
 .gamecontainer {
-    position: absolute;
+    overflow: hidden;  /** hidden */
+    position: relative;
+
+    width: 100vw;
+    height: 100vh; 
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100vw;
-    height: 100vh;
+    
     background: radial-gradient(at top, var(--bg-grad1), var(--bg-grad2));
     color: #fff;
-    padding: 10px;
+    padding: 40px;
   }
 .scoreboard{
+    position: absolute;
     display: flex;
     align-items: center;
     justify-content:center;
@@ -98,14 +103,16 @@ body{
 
 
 .game{
+    /* top: 25vh; */
+    position: absolute;
     background: url(/original/images/bg-triangle.svg)no-repeat center center;
   display: grid;
   grid-template-columns: repeat(2,1fr);
   padding: 10px;
+  margin-top: 15%;
+  align-items: center;
 }
 .choice-btn{
-
-border: none;
 background: #f0f2f4;
 width: 250px;
 height: 230px;
@@ -134,11 +141,10 @@ border: 8px solid red;
 .choice .choice-btn:hover{
     transform: translate3d(0px,-8px,0px);
 }
-
-
 /*! RESULT */
 .result{
-    top: 20vh;
+    position: absolute;
+    margin-top: 15%;
     display: none;
     align-items: center;
     height: 50vh;
@@ -160,6 +166,8 @@ border: 8px solid red;
     width: 80px;
 }
 
+
+/* ! RESPONSIVE */
 @media(max-width:1500px){
     .scoreboard{
         min-width: 80%;
@@ -177,10 +185,14 @@ border: 8px solid red;
         .choice-btn img{
            width: 60px;
         }
-
+        .game{
+            margin-top: 30%;
+        }
+       
         /** RESULT */
 
         .result{
+            margin-top:25% ;
             font-size: 1.2rem;
             letter-spacing: 1.3px;
         }
@@ -190,29 +202,19 @@ border: 8px solid red;
             margin:2rem 4rem;
         }
 }
-@media(max-width:820px){
-         /** RESULT */
-         .score{
-            padding: 30px 30px;
-        }
-         .result{
-            font-size: 0.9rem;
-            letter-spacing: 0.4px;
-        }
-        .result .choice-btn{
-            width: 180px;
-            height: 160px;
-            margin:2rem 2rem;
-        }
-}
-
-@media(max-width:600px){
+@media(max-width:850px){
     .scoreboard{
         min-width: 70%;
         font-size: 1.2rem;
     } 
     .score{
         padding: 25px 25px;
+    }
+    .game{
+        margin-top: 45%;
+    }
+    .result{
+        margin-top: 55%;
     }
     .choice-btn{
         width: 170px;
@@ -259,11 +261,12 @@ border: 8px solid red;
 
         .result{
             font-size: 0.9rem;
-            letter-spacing: 1px;
+            letter-spacing: 0.5px;
         }
         .result .choice-btn{
-            width: 140px;
-            height: 120px;
-            margin:1rem 2rem;
+            width: 120px;
+            height: 100px;
+            margin:2rem 1rem;
         }
 }
+@media(max-width:400px)
